# ai-agents

./: CLAUDE.md  README.md  main.py  models.py  pyproject.toml
01_core_concepts/: core_concepts.py  exercise_01.py
02_working_with_llms/: exercise_02.py  working_with_llms.py
03_prompt_messages/: all_prompts.py  few_shot.py  prompt_messages.py
04_output_parsers/: exercise_04.py  json_output_parser.py  pydantic_output_parser.py  str_output_parser.py  structured_output_parser.py
05_smart_qa_bot/: qa_bot_loop.py  qa_response.py  smart_qa_bot.py
06_chains/: basic_parallel_chains.py  chain_branching.py  debugging.py  passthrough_chain.py
07_document_loaders/: lazy_loaders.py  structured_documents.py  text_loaders.py  web_loaders.py
07_document_loaders/docs/: marte.txt  saturno.txt  urano.txt
08_chunking/: recursive_character_text_splitter.py
08_chunking/docs/: quicksort.py  sistema_solar.txt
09_rag/: embedding_cache.py  exercise.py  similarity_search.py  vector_stores.py
09_rag/.embedding_cache/: 10-rag-tutorial91bfe76f-78a4-56ca-ac05-9626241baaa5
09_rag/chroma/: chroma.sqlite3
09_rag/exercise_chroma/: chroma.sqlite3
10_rag/: embeddings.py
10_rag_deep_dive/: advanced_rag_chain.py  corpus.py  rag_pipeline.py
11_memory/: basic_memory.py  message_trimming.py  multi_conversation_memory copy.py  windowed_memory.py
core_concepts/: excercise_01.py
util/: models.py  template.py
workin_with_llms/: working_with_llms.py
